...
        android:id="@+id/container1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/big_cities"
            android:text="@string/text_list_big_cities"

            android:textSize="15sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/small_cities"
            android:text="@string/text_list_small_cities"

            android:textSize="15sp"
            android:layout_marginTop="15dp"
            />

...
